--- a/src/main/resources/templates/teacher/review/list.html
+++ b/src/main/resources/templates/teacher/review/list.html
@@ -3,21 +3,15 @@
 <head>
     <title>OES | 试卷复核</title>
     <!-- 引入全局 css 文件 -->
-    <%
-    include("../include/css.html"){}
-    %>
+    <%include("../../include/css.html"){}%>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
 
 <div class="wrapper">
     <!-- 引入头部 -->
-    <%
-    include("include/header.html"){}
-    %>
+    <%include("../include/header.html"){}%>
     <!-- 左侧菜单栏 -->
-    <%
-    include("include/sider.html"){}
-    %>
+    <%include("../include/sider.html"){}%>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
 
@@ -44,14 +38,10 @@
 
     </div>
     <!-- 引入footer -->
-    <%
-    include("../include/footer.html"){}
-    %>
+    <%include("../../include/footer.html"){}%>
 </div>
 <!-- 引入全局 js 脚本文件 -->
-<%
-include("../include/js.html"){}
-%>
+<% include("../../include/js.html"){} %>
 <script src="/static/plugins/echarts/echarts.min.js"></script>
 <script src="/static/plugins/layer/layer.js"></script>
 </body>
