--- a/src/main/resources/templates/teacher/paper/import-paper.html
+++ b/src/main/resources/templates/teacher/paper/import-paper.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>OES | 新增试卷</title>
     <!-- 引入全局 css 文件 -->
-    <%
-    include("../include/css.html"){}
-    %>
+    <% include("../../include/css.html"){} %>
     <link rel="stylesheet" href="/static/plugins/datetimepicker/css/bootstrap-datetimepicker.min.css">
     <link rel="stylesheet" href="/webjars/adminlte/2.3.11/plugins/datepicker/datepicker3.css">
 </head>
@@ -15,13 +13,9 @@
 
 <div class="wrapper">
     <!-- 引入头部 -->
-    <%
-    include("../teacher/include/header.html"){}
-    %>
+    <% include("../../teacher/include/header.html"){} %>
     <!-- 左侧菜单栏 -->
-    <%
-    include("../teacher/include/sider.html"){}
-    %>
+    <% layout("../../teacher/include/sider.html",{name:"import-paper"}){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
         <section class="content">
@@ -47,26 +41,27 @@
                         </form>
                         <form method="post" id="addForm">
                             <div class="form-group">
-                                <label for="teacherId">试卷名称</label>
+                                <label for="paperName">试卷名称</label>
                                 <input type="hidden" class="form-control" id="teacherId" name="teacherId"
                                        value="${session.teacherId}">
                                 <input type="hidden" class="form-control" name="paperState" value="未开始">
-                                <input type="text" class="form-control" id="paperName" name="paperName">
+                                <input type="text" class="form-control paperName" id="paperName" name="paperName">
                                 <input type="text" hidden="hidden" name="questionId" id="questionId">
                                 <input type="text" hidden="hidden" name="paperFormId" id="paperFormId">
                             </div>
                             <div class="form-group">
                                 <label for="teacherId">目前试卷分值</label>
-                                <input type="text" class="form-control" id="curScore" disabled>
+                                <input type="text" class="form-control teacherId" id="curScore" disabled>
                             </div>
                             <div class="form-group">
                                 <label for="courseId">所属课程</label>
-                                <select class="form-control" id="courseId" name="courseId">
+                                <select class="form-control courseId" id="courseId" name="courseId">
                                 </select>
                             </div>
                             <div class="form-group">
                                 <label for="paperType">试卷类型 </label>
-                                <select class="form-control" name="paperType" id="paperType" required="required">
+                                <select class="form-control paperType" name="paperType" id="paperType"
+                                        required="required">
                                     <option value="">请选择</option>
                                     <option value="正式">正式</option>
                                     <option value="模拟">模拟</option>
@@ -80,7 +75,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="majorId">考试专业</label>
-                                <select id="majorId" name="majorId" class="form-control" required="required">
+                                <select id="majorId" name="majorId" class="form-control majorId" required="required">
                                 </select>
                             </div>
                             <div class="form-group">
@@ -264,7 +259,7 @@
                         </form>
                     </div>
                     <div class="box-footer">
-                        <button class="btn btn-primary" id="addBtn">保存</button>
+                        <button class="btn btn-primary" id="saveImportBtn">保存</button>
                         <a href="javascript:history.go(0)" class="btn btn-danger" id="reset">重置</a>
                     </div>
                 </div>
@@ -272,157 +267,13 @@
         </section>
     </div>
     <!-- 引入footer -->
-    <%
-    include("../include/footer.html"){}
-    %>
+    <%include("../../include/footer.html"){} %>
 </div><!-- 引入全局 js 脚本文件 -->
 <%
-include("../include/js.html"){}
+include("../../include/js.html"){}
 %>
-<script src="/static/plugins/datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
-<script src="/static/plugins/datetimepicker/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
-<script src="/static/plugins/moment/moment.js"></script>
-<script src="/webjars/adminlte/2.3.11/plugins/datepicker/bootstrap-datepicker.js"></script>
-<script src="/webjars/adminlte/2.3.11/plugins/datepicker/locales/bootstrap-datepicker.zh-CN.js"></script>
-<script src="/static/plugins/jquery-validation/jquery.validate.js"></script>
-<script src="/static/plugins/jquery-form/jquery.form.min.js"></script>
-<script src="/static/plugins/layer/layer.js"></script>
-<script>
-    // 试卷类型下拉框 select2
-    $('#paperType').select2({width: "100%"});
-    // 获取课程集合
-    $.get("/course/teacher/" + "${session.teacherId}").done(function (data) {
-        let options = "";
-        $('#courseId').empty();
-        options += "<option value=''>请选择</option>";
-        $.each(data, function (index, e) {
-            options += "<option selected='true' value=" + e.id + ">" + e.courseName + "</option>";
-        });
-        $("#courseId").append(options).select2();
-    });
-
-    // 获取学院集合
-    $.get("/academy").done(function (data) {
-        let options = "";
-        $('#academy').empty();
-        options += "<option value=''>请选择</option>";
-        $.each(data, function (index, e) {
-            options += "<option selected='true' value=" + e.id + ">" + e.name + "</option>";
-        });
-        $("#academy").append(options).select2();
-    });
-
-    // 专选择框框回填
-    function getAcademy(id) {
-        // 获取学院集合
-        $.get("/major/academy/" + id).done(function (data) {
-            let options = "";
-            //回填的二级类别值
-            $('#majorId').empty();
-            options += "<option value=''>请选择</option>";
-            $.each(data, function (index, e) {
-                options += "<option selected='true' value=" + e.id + ">" + e.major + "</option>";
-            });
-            $("#majorId").append(options).select2();
-        });
-    };
-
-    // 自动上传
-    $('#upload').change(function () {
-        var formData = new FormData();
-        var files = $($(this))[0].files[0];
-        formData.append("file", files);
-        layer.msg('正在提交中....');
-        $.ajax({
-            url: '/teacher/paper/import/excel',
-            type: 'POST',
-            data: formData,
-            processData: false,
-            contentType: false,
-            dataType: 'json',
-            success: function (res) {
-                if (res.state === 'success') {
-                    $('#paperName').val(res.data.paperName);
-                    $('#questionId').val(res.data.questionIdList);
-                    $('#paperFormId').val(res.data.paperFormId);
-                    $('#curScore').val(res.data.score);
-                    layer.msg('上传成功');
-                } else {
-                    layer.msg(res.message);
-                }
-            }
-            , error: function (res) {
-                layer.msg(res.message);
-            }
-        });
-    });
-
-    // 时间选择框
-    $(function () {
-        const date = new Date();
-        const picker = $("#datepicker").datetimepicker({
-            format: "yyyy-mm-dd hh:ii",
-            language: "zh-CN",
-            autoclose: true,
-            todayHighlight: true,
-            startDate: date
-        });
-        picker.on("changeDate", function (e) {
-            const time = $("#datepicker").val();
-            const day = time.split(" ")[0];
-            $('#datepicker2').datetimepicker('setStartDate', day);
-        });
-
-        let timepicker = $('#datepicker2').datetimepicker({
-            format: "yyyy-mm-dd hh:ii",
-            language: "zh-CN",
-            autoclose: true,
-            todayHighlight: true
-        });
-
-        // 提交组卷
-        $('#addBtn').click(function () {
-            if ($('#paperName').val() === '') {
-                layer.alert("请填写试卷名称");
-                return false;
-            } else if ($('#courseId').val() === '') {
-                layer.alert("请选择课程");
-                return false;
-            } else if ($('#academy').val() === '') {
-                layer.alert("请选择专业");
-                return false;
-            } else {
-                $.ajax({
-                    type: "POST",
-                    data: $('#addForm').serialize(),
-                    success: function (res) {
-                        if (res.state === "success") {
-                            layer.alert("添加成功");
-                            window.location.href = "/teacher/paper/show/" + res.data;
-                        } else {
-                            layer.alert(res.message);
-                        }
-                    }
-                });
-            }
-        });
-    });
-
-    // 随机部分
-    $("#a").select2().val(0);
-    $("#b").select2().val(0);
-    $("#c").select2().val(0);
-    $("#d").select2().val(0);
-    $("#e").select2().val(0);
-    $("#f").select2().val(0);
-    $("#aDif").select2().val("0");
-    $("#bDif").select2().val("0");
-    $("#cDif").select2().val("0");
-    $("#dDif").select2().val("0");
-    $("#eDif").select2().val("0");
-    $("#fDif").select2().val("0");
-
-</script>
+<!-- 接口 -->
+<%include("api/import-paper-api.html"){}%>
 </body>
 </html>
 
