--- a/src/main/resources/templates/teacher/paper/list.html
+++ b/src/main/resources/templates/teacher/paper/list.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>OES | 试卷列表</title>
     <!-- 引入全局 css 文件 -->
-    <%
-    include("../include/css.html"){}
-    %>
+    <% include("../../include/css.html"){} %>
     <style>
         .table > tbody > tr:hover {
             cursor: pointer;
@@ -31,25 +29,21 @@
 <body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
     <!-- 引入头部 -->
-    <%
-    include("../teacher/include/header.html"){}
-    %>
+    <% include("../../teacher/include/header.html"){} %>
     <!-- 左侧菜单栏 -->
-    <%
-    include("../teacher/include/sider.html"){}
-    %>
+    <% layout("../../teacher/include/sider.html",{name:"paper"}){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
         <section class="content">
             <div class="box">
                 <div class="box-header with-border">
-                    <h3 class="box-title">试卷管理</h3>
+                    <h3 class="box-title">  试卷管理</h3>
                     <div class="box-tools pull-right">
-                        <a href="/teacher/paper/importNewPaper" class="btn btn-primary btn-sm"><i
-                                class="fa fa-plus-circle"></i> （导入试题） 新增考试</a>
-                        <a id="newBtn" class="btn btn-success btn-sm"><i class="fa fa-plus-circle"></i>（随机抽题） 新增试卷</a>
-                        <a href="/teacher/paper/showPaperForm" class="btn btn-warning btn-sm"><i
-                                class="fa fa-search"></i> 查看模版</a>
+                        <a href="/teacher/paper/import" class="btn btn-primary btn-sm"><i
+                                class="fa fa-plus-circle"></i>  导入试题</a>
+                        <a id="goSave" class="btn btn-success btn-sm"><i class="fa fa-plus-circle"></i>    随机组卷</a>
+                        <a href="/teacher/paperForm" class="btn btn-warning btn-sm"><i class="fa fa-search"></i>
+                            查看模版</a>
                     </div>
                 </div>
                 <div class="box-body no-padding">
@@ -84,7 +78,7 @@
                             </td>
                             <td>${paper.paperType}</td>
                             <td>
-                                <button class="btn btn-vk btn-sm viewBtn" rel="${paper.id}">查看试卷</button>
+                                <button class="btn btn-vk btn-sm viewBtn" onclick="viewPaper(${paper.id})">查看试卷</button>
                             </td>
                         </tr>
                         <% } %>
@@ -96,48 +90,12 @@
         </section>
     </div>
     <!-- 引入footer -->
-    <%
-    include("../include/footer.html"){}
-    %>
+    <% include("../../include/footer.html"){} %>
 </div>
 <!-- 引入全局 js 脚本文件 -->
-<%
-include("../include/js.html"){}
-%>
-<script src="/static/plugins/layer/layer.js"></script>
+<% include("../../include/js.html"){} %>
 <script src="/static/plugins/jquery-pagination/jquery.twbsPagination.min.js"></script>
-<script>
-
-    $(function () {
-        // 查看试卷信息
-        $(".viewBtn").click(function () {
-            let id = $(this).attr("rel");
-            window.location.href = "/teacher/paper/show/" + id;
-        });
-
-        // 新增随机试卷
-        $("#newBtn").click(function () {
-            layer.confirm('是否使用默认试卷模版？', {
-                btn: ['是', '否'] //按钮
-            }, function () {
-                window.location.href = "/teacher/paper/newPaper/1";
-            }, function () {
-                window.location.href = "/teacher/paper/newPaperForm";
-            });
-        });
-
-        //分页
-        $('#pagination-demo').twbsPagination({
-            totalPages: "${page.pages}",
-            visiblePages: 3,
-            first: '首页',
-            last: '末页',
-            prev: '上一页',
-            next: '下一页',
-            href: "?p={{number}}"
-        });
-    });
-</script>
+<%include("api/list-api.html"){} %>
 </body>
 </html>
 
