--- a/src/main/resources/templates/teacher/paper/paper-form-list.html
+++ b/src/main/resources/templates/teacher/paper/paper-form-list.html
@@ -6,22 +6,36 @@
     <title>OES | 试卷模板列表</title>
     <!-- 引入全局 css 文件 -->
     <%
-    include("../include/css.html"){}
+    include("../../include/css.html"){}
     %>
 </head>
+<style>
+    .table > tbody > tr:hover {
+        cursor: pointer;
+    }
+
+    .table > tbody > tr > td {
+        vertical-align: middle;
+    }
+
+    th {
+        font-size: 15px;
+        text-align: center;
+    }
+
+    td {
+        font-size: 15px;
+        text-align: center;
+    }
+</style>
 <body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
     <!-- 引入头部 -->
-    <%
-    include("../teacher/include/header.html"){}
-    %>
+    <% include("../../teacher/include/header.html"){} %>
     <!-- 左侧菜单栏 -->
-    <%
-    include("../teacher/include/sider.html"){}
-    %>
+    <% include("../../teacher/include/sider.html"){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
-
         <section class="content">
             <div class="box">
                 <div class="box-header with-border">
@@ -79,7 +93,11 @@
                             <td>编程题</td>
                             <td> ${form.QProgramNum}</td>
                             <td> ${form.QProgramScore}</td>
-                            <td><a href="/teacher/paper/newPaper/${form.id}">使用</a> <a class="rowDel" rel="${form.id}">删除</a>
+                            <td>
+                                <a class="btn btn-sm btn-vk" href="/teacher/paper/save/${form.id}">使用</a>
+                                <a class="rowDel btn btn-sm btn-danger"
+                                   rel="${form.id}">删除
+                                </a>
                             </td>
                         </tr>
                         <% } %>
@@ -90,34 +108,11 @@
         </section>
     </div>
     <!-- 引入footer -->
-    <%
-    include("../include/footer.html"){}
-    %>
+    <% include("../../include/footer.html"){} %>
 </div><!-- 引入全局 js 脚本文件 -->
-<%
-include("../include/js.html"){}
-%>
-<script src="/static/plugins/layer/layer.js"></script>
-<script>
-    // 操作试卷模板
-    $(function () {
-        $(".rowDel").click(function () {
-            const id = $(this).attr("rel");
-            layer.confirm("确定删除该模版么?", function () {
-                $.get("/teacher/paper/delPaperForm/" + id).done(function (data) {
-                    if (data.state === "success") {
-                        layer.msg("删除成功!");
-                        window.location.href = "/teacher/paper/showPaperForm";
-                    } else {
-                        layer.msg(data.message);
-                    }
-                }).error(function () {
-                    layer.msg("服务器异常");
-                });
-            });
-        });
-    });
-</script>
+<% include("../../include/js.html"){} %>
+<!-- 接口 -->
+<%include("api/paper-form-list-api.html"){}%>
 </body>
 </html>
 
